# Flask-Babel-JS

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
flask_babel_js/: __init__.py
