[project]
name = "Flask-Babel-JS"
version = "1.0.3"
description = "Flask extension to add Flask-Babel translations in JS"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-babel~=4.0",
    "flask~=3.1",
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
